--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,7 @@
     <!-- <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"> -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
-    <title>Lhiel Pizza</title>
+    <title>Family Pizza House</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
